Bug 384009 - Launcher icon is dragging together with cursor upon cursor movement after right click
Summary: Launcher icon is dragging together with cursor upon cursor movement after rig...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Quicklaunch widget (other bugs)
Version First Reported In: 5.18.4
Platform: Netrunner Rolling Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Rosca
URL:
Keywords: usability
: 419855 431345 446064 447345 457015 485057 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-08-25 15:03 UTC by Alexander Mentyu
Modified: 2025-12-06 01:58 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.22
Sentry Crash Report:


Attachments
See the moving (Vivaldi Browser) icon which follows the mouse pointer into the contextual menu... (70.54 KB, image/png)
2024-04-05 02:29 UTC, Joerg Schiermeier
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2017-08-25 15:03:44 UTC
Prerequisites:
Availability of at least one launcher on the widget.

Steps to reproduce:
1. Hover over launcher on the widget and press right mouse button.
2. Move cursor.


Actual result:
Launcher icon is moving together with cursor.


Expected result:
Launcher icon is moving together with cursor only after dragging with left click.
Comment 1 Nate Graham 2020-04-09 17:32:29 UTC
Confirmed. This is really annoying.
Comment 2 Nate Graham 2021-01-12 00:27:49 UTC
*** Bug 431345 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2021-12-14 20:36:07 UTC
*** Bug 446064 has been marked as a duplicate of this bug. ***
Comment 4 Rafael Linux User 2021-12-15 01:16:41 UTC
This issue continue annoying on:
Operating System: openSUSE Leap 15.3
KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Kernel Version: 5.3.18-59.27-default (64-bit)
Graphics Platform: X11
Comment 5 Nate Graham 2022-01-12 01:29:42 UTC
*** Bug 447345 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2022-02-19 17:17:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/119
Comment 7 phd 2022-06-03 09:01:06 UTC
I wanted to report the exact same issue.

Shouldn't this be a 15-minute bug?
The most probable time you may trigger this is when you are setting up your fresh KDE environment.

KDE Plasma: 5.24.5
KDE Frameworks: 5.94.0
Qt: 5.15.3
Comment 8 Nate Graham 2022-06-03 17:00:03 UTC
Probably not, because this is a non-default widget. There's an open merge request to fix the issue anyway, so hopefully it will be done soon.
Comment 9 MrNekit 2022-07-22 13:40:12 UTC
*** Bug 457015 has been marked as a duplicate of this bug. ***
Comment 10 Joerg Schiermeier 2024-04-05 02:23:41 UTC
*** Bug 485057 has been marked as a duplicate of this bug. ***
Comment 11 Joerg Schiermeier 2024-04-05 02:29:56 UTC
Created attachment 168163 [details]
See the moving (Vivaldi Browser) icon which follows the mouse pointer into the contextual menu...
Comment 12 Jonathan Marten 2025-12-03 11:17:11 UTC
*** Bug 419855 has been marked as a duplicate of this bug. ***
Comment 13 Bug Janitor Service 2025-12-03 11:31:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kdeclarative/-/merge_requests/267
Comment 14 Jonathan Marten 2025-12-03 11:32:18 UTC
Can't find the merge request referred to in comment #8, but have submitted the above.
Comment 15 Nate Graham 2025-12-06 01:58:49 UTC
Git commit 63062cc0d91df267cee2e63f9d28a22b04fccd90 by Nate Graham, on behalf of Jonathan Marten.
Committed on 06/12/2025 at 01:58.
Pushed by ngraham into branch 'master'.

DeclarativeDragArea: Filter mouse events according to acceptedButtons()

When starting or within a drag, childMouseEventFilter() needs to
take account of the buttons that the area expects to handle.

The symptom of this happens with plasma-addons/applets/quicklaunch,
where a right button click over a launcher icon starts a drag as
well as opening the context menu, despite acceptedButtons() being
set to Qt::LeftButton only.
FIXED-IN: 6.22

M  +10   -4    src/qmlcontrols/draganddrop/DeclarativeDragArea.cpp

https://invent.kde.org/frameworks/kdeclarative/-/commit/63062cc0d91df267cee2e63f9d28a22b04fccd90